@@ -1,4 +1,5 @@
 1.0.0
+Fixed flicker when window first opens.
 If prop "_NET_CURRENT_DESKTOP" is available on startup select that desktop.
 Fixed getting bottom bar size from prefs.
 Fixed window losing focus.
